build : added cobetura for code coverage with sonar