@@ -4,7 +4,7 @@
   <groupId>org.easysoa.sample</groupId>
   <artifactId>easysoa-discovery-code-sample-itf</artifactId>
   <packaging>jar</packaging>
-  <name>AXXX Web services Itf</name>
+  <name>EasySOA Discovery code sample - AXXX Web services Itf</name>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
@@ -68,4 +68,30 @@
       </plugins>
     </pluginManagement>
   </build>
+  
+  <profiles>
+      
+    <profile>
+      <id>sonar</id>
+      <!-- For code coverage with Sonar and cobertura
+      requires a "main" build :
+      -U -Dtest=false -DfailIfNoTests=false -Psonar clean install -s "/home/openwide/.m2/settings.xml.easysoa"
+      and a post-build sonar action with its own build :
+      -Psonar -DargLine=""
+      and enough memory :
+      -Xmx512m -XX:MaxPermSize=256m
+      -->
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>cobertura-maven-plugin</artifactId>
+            <version>2.6</version>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    
+  </profiles>
+  
 </project>
