@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.easysoa.discovery</groupId>
   <artifactId>easysoa-discovery-rest-mock</artifactId>
-  <name>EasySOA Discovery mock REST client and repository</name>
+  <name>EasySOA Discovery code sample - mock REST client and repository</name>
   <version>1.0-SNAPSHOT</version>
 
   <properties>
@@ -64,5 +64,30 @@
       </plugin>
     </plugins>
   </build>
+  
+  <profiles>
+      
+    <profile>
+      <id>sonar</id>
+      <!-- For code coverage with Sonar and cobertura
+      requires a "main" build :
+      -U -Dtest=false -DfailIfNoTests=false -Psonar clean install -s "/home/openwide/.m2/settings.xml.easysoa"
+      and a post-build sonar action with its own build :
+      -Psonar -DargLine=""
+      and enough memory :
+      -Xmx512m -XX:MaxPermSize=256m
+      -->
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>cobertura-maven-plugin</artifactId>
+            <version>2.6</version>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    
+  </profiles>
 
 </project>
